# front-office-copilot

./: .dockerignore  .env.example  .gitignore  Front Office Copilot Spec.md  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: logging.py  main.py
docs/: Front Office Architecture.mermaid  architecture.md
infra/: docker-compose.yml
infra/docker/: Dockerfile.api
ingestion/: capology.py  companies_house.py  http_cache.py  transfermarkt_kaggle.py  understat.py
scripts/: apply_migrations.py
sql/: 0001_init.sql  0002_enable_rls.sql  0003_contracts_unique.sql  0004_player_stats_uniq.sql
tests/: test_health.py
